--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <div>
 <h1>Welcome!</h1>
   <button href="index.html">HOME</button>
-  <button href="">EMAIL</button>
-  <button href="">ANNOUNCEMENTS</button>
+  <button href="email.html">EMAIL</button>
+  <button href="announcement.html">ANNOUNCEMENTS</button>
 <hr>
 <p>Welcome to AnruKun's website! AnruKun's YouTube channel is mainly for Fortnite livestreaming and also chatting. This site is mainly for communicating with him!</p>
 <p>Subscribe to AnruKun (AnruKun on phone) now!</p>
