--- a/email/email.html
+++ b/email/email.html
@@ -4,14 +4,15 @@
 <title>AnruKun</title>
 </head>
 <body>
-<div>
 <h1>Welcome!</h1>
   <button href="index.html">HOME</button>
   <button href="email.html">EMAIL</button>
   <button href="announcement.html">ANNOUNCEMENTS</button>
 <hr>
-<p>Welcome to AnruKun's website! AnruKun's YouTube channel is mainly for Fortnite livestreaming and also chatting. This site is mainly for communicating with him!</p>
-<p>Subscribe to AnruKun (AnruKun on phone) now!</p>
-</div>
+  <div>
+<p>If you want to email AnruKun, feel free to email him with this email or use Lemonadetv (moderator)'s email:</p>
+  <h3>gordonsilly2027@gmail.com</h3>
+  <p>Feel free to email us and we will respond as soon as possible!</p>
+  </div>
 </body>
 </html>
