--- a/email.html
+++ b/email.html
@@ -2,14 +2,16 @@
 <html>
 <head>
 <title>AnruKun</title>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1>Welcome!</h1>
-  <button href="index.html">HOME</button>
-  <button href="email.html">EMAIL</button>
-  <button href="announcement.html">ANNOUNCEMENTS</button>
-<hr>
-  <div>
+<img class="logo" src="anrukun.jpg">
+<h1 class="head">AnruKun</h1>
+  <button class="topbar"><a href="index.html">Home</a></button>
+  <button class="topbar"><a href="email.html">Email</a></button>
+  <button class="topbar"><a href="announcement.html">Announcements</a></button>
+
+  <div class="content">
 <p>If you want to email AnruKun, feel free to email him with this email or use Lemonadetv (moderator)'s email:</p>
   <h3>gordonsilly2027@gmail.com</h3>
   <p>Feel free to email us and we will respond as soon as possible!</p>
