--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html>
 <head>
 <title>AnruKun</title>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div>
-<h1>Welcome!</h1>
-  <button href="index.html">HOME</button>
-  <button href="email.html">EMAIL</button>
-  <button href="announcement.html">ANNOUNCEMENTS</button>
-<hr>
+<img class="logo" src="anrukun.jpg">
+<h1 class="head">AnruKun</h1>
+ <button class="topbar"><a href="index.html">Home</a></button>
+  <button class="topbar"><a href="email.html">Email</a></button>
+  <button class="topbar"><a href="announcement.html">Announcements</a></button>
+
+<div class="content">
+	
 <p>Welcome to AnruKun's website! AnruKun's YouTube channel is mainly for Fortnite livestreaming and also chatting. This site is mainly for communicating with him!</p>
-<p>Subscribe to AnruKun (AnruKun on phone) now!</p>
+<p>Subscribe to <a href="https://www.youtube.com/channel/UC8CUh9Ux5EUYiC9U7lG8GJw">AnruKun</a> (AnruKun on iphone Fortnite) now!</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Mk27DqTTH2Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/HDAPDULpWCw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LaFdql03gww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </body>
 </html>
