--- a/announcement.html
+++ b/announcement.html
@@ -11,7 +11,7 @@
   <button class="topbar"><a href="email.html">Email</a></button>
   <button class="topbar"><a href="announcement.html">Announcements</a></button>
   <div class="content">
-  	<h2>[CURRENTLY IN MAINTENANCE]</h2>
+  	<h2 class="paragraphs">[CURRENTLY IN MAINTENANCE]</h2>
   </div>
 </body>
 </html>
