--- a/email.html
+++ b/email.html
@@ -12,9 +12,9 @@
   <button class="topbar"><a href="announcement.html">Announcements</a></button>
 
   <div class="content">
-<p>If you want to email AnruKun, feel free to email him with this email or use Lemonadetv (moderator)'s email:</p>
-  <h3>gordonsilly2027@gmail.com</h3>
-  <p>Feel free to email us and we will respond as soon as possible!</p>
+<p class="paragraphs">If you want to email AnruKun, feel free to email him with this email or use Lemonadetv (moderator)'s email:</p>
+  <h3 class="paragraphs">gordonsilly2027@gmail.com</h3>
+  <p class="paragraphs">Feel free to email us and we will respond as soon as possible!</p>
   </div>
 </body>
 </html>
