--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <div class="content">
 	
-<p>Welcome to AnruKun's website! AnruKun's YouTube channel is mainly for Fortnite livestreaming and also chatting. This site is mainly for communicating with him!</p>
-<p>Subscribe to <a href="https://www.youtube.com/channel/UC8CUh9Ux5EUYiC9U7lG8GJw">AnruKun</a> (AnruKun on iphone Fortnite) now!</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Mk27DqTTH2Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/HDAPDULpWCw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/LaFdql03gww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p class="paragraphs">Welcome to AnruKun's website! AnruKun's YouTube channel is mainly for Fortnite livestreaming and also chatting. This site is mainly for communicating with him!</p>
+<p class="paragraphs">Subscribe to <a  class="paragraphs" href="https://www.youtube.com/channel/UC8CUh9Ux5EUYiC9U7lG8GJw">AnruKun</a> (AnruKun on iphone Fortnite) now!</p>
+<iframe  class="paragraphs" width="560" height="315" src="https://www.youtube.com/embed/Mk27DqTTH2Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe  class="paragraphs" width="560" height="315" src="https://www.youtube.com/embed/HDAPDULpWCw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe  class="paragraphs" width="560" height="315" src="https://www.youtube.com/embed/LaFdql03gww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </body>
 </html>
